blue-red/app-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: myapp
spec:
  host: myapp
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts: # myapp.default.svc.cluster.local
  - myapp
  gateways:
  - app-gateway
  http:
    - route:
      - destination:
          # host: myapp
          host: myapp-v1.default.10.130.9.106.xip.io
          subset: v1
        weight: 0
      - destination:
          # host: myapp
          host: myapp-v2.default.10.130.9.106.xip.io
          subset: v2
        weight: 100        
---
